fix(Dialog): fixes issue on mobile where user can drag the mask down

--- a/src/components/Dialog/style.css
+++ b/src/components/Dialog/style.css
@@ -8,7 +8,9 @@
   opacity: 1;
   position: fixed;
   right: 0;
-  top: 0;
+
+  /* fixes issue on mobile where user can drag the mask down */
+  top: -100vh;
   transition: opacity var(--e-time-0) var(--e-transition);
   z-index: var(--e-z-index-1);
 }
@@ -57,6 +59,6 @@
 }
 
 .e-dialog__dialog {
-  margin: 0 var(--e-space-3);
+  margin: 100vh var(--e-space-3) 0;
   max-width: var(--e-max-width-0);
 }
